.xml files for each layout added with vital controls

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Ishihara_test</string>
+    <string name="start">Start</string>
+    <string name="test">Test</string>
+    <string name="versus">Versus</string>
+    <string name="return_button">Return</string>
+    <string name="submit">Submit</string>
 </resources>
