--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="versus">Versus</string>
     <string name="return_button">Return</string>
     <string name="submit">Submit</string>
+    <string name="choose_mode">Choose mode</string>
+    <string name="test_description">Check how you perform, doing standard Ishihara test! At the end of the test you will receive color blindness scores deducted by our app.</string>
+    <string name="versus_description">Challenge your friends in this Ishihara solving test trial. Best scores achieved will be ranked on leaderboard!</string>
 </resources>
