--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,10 @@
     <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ac mauris quam. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus sollicitudin, nunc a molestie lobortis, purus sapien convallis nibh, eu finibus augue lacus id libero.</string>
     <string name="correct_answers">Correct answers</string>
     <string name="question">What do you see?</string>
-    <string name="leaderoard_title">Leaderoard</string>
+    <string name="leaderboard_title">Leaderboard</string>
     <string name="result_caption">Your result</string>
+    <string name="return_dialog">Return to main menu?</string>
+    <string name="return_dialog_detail">Your progress will not be saved.</string>
+    <string name="cancel_btn">Continue the test</string>
+    <string name="return_btn">Return to main menu</string>
 </resources>
